config/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-frontend
spec:
  selector:
    app: sample-frontend #app label from the pod
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80 #The service is accessible through port 80
      targetPort: 80 #Our application runs on 80
