config/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: sample-backend
spec:
  #ingressClassName: default
  rules:
    - host: "api.sample.brunojesus.pt"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-backend
                port:
                  name: http
  tls:
    - hosts:
      - "api.sample.brunojesus.pt"
      secretName: "api.sample.brunojesus.pt"
