config/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: sample-frontend
spec:
  #ingressClassName: default
  rules:
    - host: "sample.brunojesus.pt"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-frontend
                port:
                  name: http
  tls:
    - hosts:
      - "sample.brunojesus.pt"
      secretName: "sample.brunojesus.pt"
